--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "mern",
+  "name": "byte_app",
   "version": "1.0.0",
-  "description": "",
+  "description": "decision maker",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
+    "server": "node server.js",
+    "client": "node scripts/start-client.js",
+    "start": "concurrently \"nodemon server.js\" \"npm run client\"",
+    "build": "node scripts/build.js",
     "seed": "node scripts/seedDB.js",
-    "install": "cd client && yarn install",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "test": "npm test",
+    "installDeps": "yarn && cd client && yarn"
   },
-  "author": "",
+  "author": "Brogan",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "concurrently": "^3.5.1",
+    "nodemon": "^1.11.0",
+    "mocha":"2.3.1",
+    "chai":"3.2.0",
+    "chai-http":"1.0.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "if-env": "^1.0.4",
-    "mongoose": "^5.0.17",
-    "socket.io": "^2.1.1"
+    "mongoose": "^4.11.7"
   }
 }
