--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
   "author": "Brogan",
   "license": "ISC",
   "devDependencies": {
+    "chai": "3.2.0",
+    "chai-http": "1.0.0",
     "concurrently": "^3.5.1",
-    "nodemon": "^1.11.0",
-    "mocha":"2.3.1",
-    "chai":"3.2.0",
-    "chai-http":"1.0.0"
+    "mocha": "2.3.1",
+    "nodemon": "^1.11.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "socket.io": "2.0",
+    "socket.io-client": "^2.1.1"
   }
 }
