--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-document-title": "^2.0.3",
     "react-router-dom": "^4.3.1",
     "socket.io": "2.0",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "semantic-ui-react": "^0.80.1"
   }
 }
