--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "byte_app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.16.2",
     "react": "^16.0.0",
