--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "firebase": "^5.5.3",
+    "firebaseui": "^3.4.1",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "query-string": "^6.2.0",
+    "semantic-ui-react": "^0.80.1",
     "socket.io": "2.0",
-    "socket.io-client": "^2.1.1",
-    "semantic-ui-react": "^0.80.1"
+    "socket.io-client": "^2.1.1"
   }
 }
