taking off google to redo home page

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "query-string": "^6.2.0",
+    "semantic-ui-react": "^0.80.1",
     "socket.io": "2.0",
-    "socket.io-client": "^2.1.1",
-    "semantic-ui-react": "^0.80.1"
+    "socket.io-client": "^2.1.1"
   }
 }
