--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "firebase": "^5.5.3",
+    "firebaseui": "^3.4.1",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
